--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
 
+<body>
+    <header class="header-bg">
+        <div class="header">
+            <a href="./">
+                <img src="img/bikcraft.svg" alt="Bikcraft">
+            </a>
+          
+          <nav aria-label="primaria"></nav>
+          <ul class="header-menu">
+            <li><a href="./bicicleta.html">Bicicletas</a></li>
+              <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+         </ul>
+    </header>
+    </div>
 </body>
+
 </html>
