--- a/index.html
+++ b/index.html
@@ -1,29 +1,233 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bikcraft - Bicilcetas Elétricas</title>
-    <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. explore o mundo na sua velocidade com a Bikcraft">
 
-    <link rel="stylesheet" href="./css/style.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bikcraft - Bicilcetas Elétricas</title>
+  <meta name="description"
+    content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. explore o mundo na sua velocidade com a Bikcraft">
+
+
+  <link rel="stylesheet" href="./css/style.css">
+  
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Poppins:ital,wght@1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <header class="header-bg">
-        <div class="header">
-            <a href="./">
-                <img src="img/bikcraft.svg" alt="Bikcraft">
-            </a>
-          
-          <nav aria-label="primaria"></nav>
-          <ul class="header-menu">
-            <li><a href="./bicicleta.html">Bicicletas</a></li>
-              <li><a href="./seguros.html">Seguros</a></li>
-            <li><a href="./contato.html">Contato</a></li>
-         </ul>
-    </header>
-    </div>
-</body>
+  <header class="header-bg">
+    <div class="header container">
+      <a href="./">
+        <img src="img/bikcraft.svg" alt="Bikcraft">
+      </a>
 
+      <nav aria-label="primaria">
+        <ul class="header-menu font-1-m cor-0">
+          <li><a href="./bicicleta.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+
+<main class="introducao-bg">
+  <div class="introducao container">
+    <div class="introducao-conteudo">
+      <h1 class="font-1-xxl cor-0">Bicicletas sobre medidas<span class="cor-p1">.</span> </h1>
+      <p class="font-2-l cor-5">Bicilcetaselétricas de alta precisão e qualidade,feitas sob medida para você. Explore o mundo na sua velocidade
+        com a Bikcraft</p>
+      <a class="botao" href="./bicicletas.html">Escolha a sua</a>
+    </div>
+
+    <div><img src="img/fotos/introducao.jpg" alt="Bicilceta elétrica preta"></div>
+  </div>
+</main>
+
+<article class="bicicletas-lsita">
+    <h2 class="container font-1-xxl">
+      Escolha a sua<span class="cor-p1">.</span>
+    </h2>
+
+    <ul>
+      <li>
+
+        <a href="./bicicletas/magic.html">
+          <img src="img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Magic Might</h3>
+          <span class="font-2-m cor-8">R$ 2499</span>
+        </a>
+      </li>
+
+      <li>
+      <a href="./bicicletas/nimbus.html">
+          <img src="img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
+          <span class="font-2-m cor-8">R$ 4499</span>
+        </a>
+      </li>
+
+      <li>
+      <a href="./bicicletas/nebula.html">
+          <img src="img/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nebula Cosmic</h3>
+          <span class="font-2-m cor-8">R$ 3999</span>
+        </a>
+      </li>
+    </ul>
+</article>
+
+<article class="tecnologia-bg">
+ <div class="tecnologia container">
+  <div class="tecnologia-conteudo">
+    <span class="font-2-l-b cor-5">Tecnologia Avançada</span>
+    <h2 class="font-1-xxl cor-0">Você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
+    <p class="font-2-l cor-5">Cada Bikcraft é a única que possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantido maior conforto e ergonomia na sua pedalada.Você pode também personalizar completamente suas cores.</p>
+    <a class="link" href="./bicicletas.html">escolha o modelo</a>
+    <div class="tecnologia-vantagens">
+     <div>
+      <img src="img/icones/eletrica.svg" alt="">
+      <h3 class="font-1-m cor-0">Motor Elétrico</h3>
+      <p class="font-2-s cor-5">Toda a Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia ao pedalar</p>
+    </div>
+
+    <div>
+      <img src="img/icones/rastreador.svg" alt="">
+      <h3 class="font-1-m cor-0">Rastreador</h3>
+      <p class="font-2-s cor-5">Sabemos o quão importante é a sua Bikcraft, por isso adicionamos rastreadores e sitemas anti-furto para garantir o seu sossego</p>
+    </div>
+  </div>
+ </div>
+
+
+  <div class="tecnologia-imagem">
+    <img src="img/fotos/tecnologia.jpg" alt="">
+  </div>
+ 
+</div>
+</article>
+
+
+<section class="parceiros" aria-label="Nossos Parceiros">
+  <h2 class="container font-1-xxl">
+      nossos parceiros<span class="cor-p1">.</span>
+  </h2>
+
+  <ul>
+    <li><img src="img/parceiros/caravan.svg" alt="caravan"></li>
+    <li><img src="img/parceiros/ranek.svg" alt="ranek"></li>
+    <li><img src="img/parceiros/handel.svg" alt="handel"></li>
+    <li><img src="img/parceiros/dogs.svg" alt="dogs"></li>
+    <li><img src="img/parceiros/lescone.svg" alt="lescone"></li>
+    <li><img src="img/parceiros/flexblog.svg" alt="flexblog"></li>
+    <li><img src="img/parceiros/wildbeast.svg" alt="wildbeast"></li>
+    <li><img src="img/parceiros/surfbot.svg" alt="surfbot"></li>
+  </ul>
+
+</section>
+
+<section class="depoimento" aria-label="Depoimento">
+  <div>
+    <img src="img/fotos/depoimento.jpg" alt="Pessoa pedalando uma bicicleta Bikcraft">
+  </div>
+
+  <div class="depoimento-conteudo">
+    <blockquote class="font-1-xl cor-p5">
+      <p>Pedalar sempre foi minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo á todos que  amo.</p>
+    </blockquote>
+    <span class="font-1-m-b cor-p4">Ana Júlia</span>
+  </div>
+
+</section>
+
+
+<article class="seguros-bg">
+  <div class="seguros container">
+     <h2 class="font-1-xxl cor-0">Seguros<span class="cor-p1">.</span></h2>
+     
+    <div class="seguros-item">
+      <h3 class="font-1-xl cor-6"> PRATA</h3>
+      <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
+      <ul class="font-2-m cor-0">
+        <li>Duas trocas por ano</li>
+        <li>Assitência técnica</li>
+        <li>Suporte 08h às 18h</li>
+        <li>Cobertura estadual</li>
+      </ul>
+      <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+    </div>
+
+    <div class="seguros-item">
+      <h3 class="font-1-xl cor-p1"> OURO</h3>
+      <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mensal</span></span>
+      <ul class="font-2-m cor-0">
+        <li>Cinco trocas por ano</li>
+        <li>Assitência especial</li>
+        <li>Suporte 24h</li>
+        <li>Cobertura nacional</li>
+        <li>Desconto em parceiros</li>
+        <li>Acesso ao Clube Bikcraft</li>
+      </ul>
+      <a class="botao" href="./orcamento.html">Inscreva-se</a>
+    </div>
+  
+  </div>
+</article>
+
+
+<footer class="footer-bg">
+<div class="footer container">
+    <img src="img/bikcraft.svg" alt="Bikcraft">
+    <div class="footer-contato">
+      <h3 class="font-2-l-b cor-0">Contato</h3>
+      <ul class="font-2-m cor-5">
+        <li><a href="tel:+5531985630163">+55 31 98563-0163</a></li>
+        <li><a href="mailto:vitorsantiago1911@gmail.com">vitorsantiago1911@gmail.com</a></li>
+        <li><a href="./">Rua Ali Perto, 42 - Belo Horizonte</a></li>
+        <li><a href="./">Minas Gerais</a></li>
+      </ul>
+      <div class="footer-redes">
+        <a href="https://www.instagram.com/devitor__/?hl=af" >
+          <img src="img/redes/instagram.svg" alt="instagram">
+        </a>
+
+        <a href="./" target="_blank">
+          <img src="img/redes/facebook.svg" alt="facebook">
+        </a>
+
+        <a href="./" >
+          <img src="img/redes/youtube.svg" alt="youtube">
+        </a>
+
+      </div>
+    </div>
+      <div class="footer-informacoes">
+        <h3 class="font-2-l-b cor-0">Informações</h3>
+        <nav>
+          <ul class="font-1-m cor-5">
+            <li><a href="./bicicleta.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html" >Contato</a></li>
+            <li><a href="./termos.html" >Termos e condições</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="footer-copy font-2-m cor-6">VitorSantiago & Alguns direitos reservados.</p>
+</div>
+</footer>
+
+</body>
 </html>
